# reproduce-stop-pipeline-issue

./: CMakeLists.txt  Makefile  README.md  demo_learn_script.py
components/demo_component/: CMakeLists.txt  demo_component.cpp
components/depthai-spi-api/depthai-shared/include/depthai-shared/datatype/: DatatypeEnum.hpp
hand-demo/: HandTrackerEdgeSPI.py  demo.py  demo_spi.py  template_manager_script_duo.py  template_manager_script_duo_original.py  template_manager_script_solo.py  tmp_code.py
main/: CMakeLists.txt  ESP32_Utils.hpp  ESP32_Utils_OTA.hpp  config.h  main.cpp  name_utils.hpp
